Mudle_of_today_03/09/2023

--- a/HTML/1.2_list.html
+++ b/HTML/1.2_list.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-       
-    </head>
     <body>
-        
+        <h1 style="color:blue"><b><i><u>First list</u></i></b></h1>
+       <ul style="color:blue">
+        <li >chocolate</li>
+        <li>milk</li>
+        <li>suger</li>
+       </ul> 
+       <br><h1 style="color:red"><b><i><u>Second list</u></i></b></h1>
+       <ol style="color:red">
+        <li >chocolate</li>
+        <li>milk</li>
+        <li>suger</li>
+       </ol> </br>
     </body>
 </html>
