Modole-of_today_03/09/02023

--- a/HTML/1.3_Tables.html
+++ b/HTML/1.3_Tables.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-       
-    </head>
-    <body>
+
+    <body><h1>STUDENT MARK SHEET</h1>
+        <table style="border:red" border="solid" width=200px>
+            <tr><th></th>
+                <th>Name</th>
+                <th>Math</th>
+                <th>English</th>
+                <th>Physics</th>
+                <th>General Knowledge</th>
+            </tr>
+            <tr><th>David</th>
+                <th>85</th>
+                <th>87</th>
+                <th>88</th>
+                <th>92</th>
+                <th>88</th>
+            </tr>
+            <tr><th>Richard</th>
+                <th>91</th>
+                <th>81</th>
+                <th>78</th>
+                <th>71</th>
+                <th>74</th>
+            </tr>
+            <tr><th>John</th>
+                <th>81</th>
+                <th>86</th>
+                <th>88</th>
+                <th>84</th>
+                <th>92</th>
+            </tr>
+            <tr><th>Tony</th>
+                <th>84</th>
+                <th>86</th>
+                <th>87</th>
+                <th>82</th>
+                <th>81</th>
+            </tr>
+            <tr><th>Scot</th>
+                <th>71</th>
+                <th>79</th>
+                <th>82</th>
+                <th>88</th>
+                <th>89</th>
+            </tr>
+        </table>
         
     </body>
 </html>
