module-of-today_03/09/2023

--- a/HTML/1.4_First_Web_Page.html
+++ b/HTML/1.4_First_Web_Page.html
@@ -5,6 +5,15 @@
        
     </head>
     <body>
-        
+        <h1>Hello! MY name is <em>Idan</em></h1>
+        <h2>I am a civil engineer studying software development </h2>
+        <img src="C:\Users\idanr\Desktop\IMG-20230616-WA0014.jpg" width="100px" alt="profile picture">
+        <h4>I graduated with a bachelor's degree in civil engineering. 
+            <br>My love for writing code made me make a career change.</br>
+             In my free time I love to do sports, yoga, meditation and more.</h4>
+             <ul>
+                <form><button type="submit" formaction="https://github.com/Idan3011">MY Github</button></form>
+                <form><button type="submit" formaction="www.linkedin.com/in/idan-rotenberg-286b1b18b">MY Linkedin page</button></form>
+             </ul>
     </body>
 </html>
