Module-of-today_03/09/2023

--- a/HTML/1.4_First_Web_Page.html
+++ b/HTML/1.4_First_Web_Page.html
@@ -11,9 +11,10 @@
         <h4>I graduated with a bachelor's degree in civil engineering. 
             <br>My love for writing code made me make a career change.</br>
              In my free time I love to do sports, yoga, meditation and more.</h4>
+             <h4><bold>follow me</bold></h4>
              <ul>
-                <form><button type="submit" formaction="https://github.com/Idan3011">MY Github</button></form>
-                <form><button type="submit" formaction="www.linkedin.com/in/idan-rotenberg-286b1b18b">MY Linkedin page</button></form>
+                <form><button type="submit" formaction="https://github.com/Idan3011">MY Github Page</button></form>
+                <form><button type="submit" formaction="www.linkedin.com/in/idan-rotenberg-286b1b18b">MY Linkedin Page</button></form>
              </ul>
     </body>
 </html>
