Module_of_today_04.09.2023

--- a/HTML/1.4_First_Web_Page.html
+++ b/HTML/1.4_First_Web_Page.html
@@ -2,15 +2,17 @@
 
 <html>
     <head>
-       
+        <link rel="stylesheet" type="text/css" href="C:\Users\idanr\Desktop\BootCamp\CSS\3.1_refactors_with_divs_FWP.css">
     </head>
     <body>
-        <h1>Hello! MY name is <em>Idan</em></h1>
+      <div id="Hello"> 
+        <h1>Hello! MY name is <span style="color:rgb(33, 67, 154)">Idan</span></h1> 
         <h2>I am a civil engineer studying software development </h2>
-        <img src="C:\Users\idanr\Desktop\IMG-20230616-WA0014.jpg" width="100px" alt="profile picture">
-        <h4>I graduated with a bachelor's degree in civil engineering. 
+                    </div>  
+        <img src="C:\Users\idanr\Desktop\HomeWork\PICS\ProfilePic.jpg" width="100px" alt="profile picture">
+        <h4 class="about-me">I graduated with a bachelor's degree in civil engineering. 
             <br>My love for writing code made me make a career change.</br>
-             In my free time I love to do sports, yoga, meditation and more.</h4>
+             In my free time I love to do sports, reading books, yoga, meditation and more.</h4>
              <h4><bold>follow me</bold></h4>
              <ul>
                 <form><button type="submit" formaction="https://github.com/Idan3011">MY Github Page</button></form>
