Module_of_today_09_04_2023

--- a/HTML/5.3_refactor_with_styling_FWP.html
+++ b/HTML/5.3_refactor_with_styling_FWP.html
@@ -10,7 +10,7 @@
                     </div> <div class="container"> 
         <img src="C:\Users\idanr\Desktop\HomeWork\PICS\ProfilePic.jpg" width="100px" alt="profile picture">
         <h4 class="about-me">I graduated with a bachelor's degree in civil engineering. 
-            <br>My love for writing code made me make a career change.</br>
+            <span>My love for writing code made me make a career change.</span>
              In my free time I love to do sports, reading books, practice yoga, meditation and more.</h4>
              <h4><bold>follow me on:</bold></h4>
              <ul>
