--- a/HTML/8.3_positioning.html
+++ b/HTML/8.3_positioning.html
@@ -12,7 +12,7 @@
             div two
         </div>
         <div class="div_three">
-            div three
+            div thre
         </div>
         <div class="div_four">
             div four
