Module of today 10.9.2023

--- a/HTML/2.1_forms.html
+++ b/HTML/2.1_forms.html
@@ -25,7 +25,7 @@
                 <form action="/action_page.php">
                     <input type="checkbox" name="term_of_service" value="agree">
                     <label for="term_of_service"> I agree to the </label>
-                    <a href="false.url">term of service</a>
+                    <a href="#">term of service</a>
                     <br><br><button type="button">Sing in!</button></br></br>
                   </form>
     </body>
