--- a/HTML/11.2_flex_basic_1.html
+++ b/HTML/11.2_flex_basic_1.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/11.2_flex_basic_1.css">
+    <link rel="stylesheet" href="../CSS/11.2_flex_basic.css">
     <title>Flex Basic</title>
 </head>
 <body>
-    <div class="container">
-        <div class="item item-1">1</div>
-        <div class="item item-2">2</div>
-        <div class="item item-3">3</div>
-    </div>
-   
+    <div id="box1">1</div>
+    <div id="box2">2</div>
+    <div id="box3">3</div>
 </body>
 </html>
