Module of today 11.9.2023

--- a/HTML/12.3_pseudo_box_color_animater.html
+++ b/HTML/12.3_pseudo_box_color_animater.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/12.2-pseudo_box_color.css">
+    <link rel="stylesheet" href="../CSS/12.3_pseudo_box_color_animater.css">
     <title>12.2 Pseudo Box Color</title>
 </head>
 <body>
     <div class="box1">
-        text
     </div>
 </body>
 </html>
