--- a/HTML/12.4_cool_border.html
+++ b/HTML/12.4_cool_border.html
@@ -11,7 +11,9 @@
         <div class="contet">
             Cool Border
     </div>
-    <div class="box2"></div>
+    <div class="box2">
+        
+    </div>
     </div>
 </body>
 </html>
