Module of today 13.9.2023

--- a/HTML/14.4_spinners.html
+++ b/HTML/14.4_spinners.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <ul>
-        <li class="btn1">test</li>
-        <li class="btn2">test</li>
-        <li class="btn3">test</li>
-        <li class="btn4">test</li>
+        <li class="btn1"></li>
+        <li class="btn2"></li>
+        <li class="btn3"></li>
+        <li class="btn4"></li>
     </ul>
     
 </body>
